更新 24c539ba5cc5db67.html

--- a/24c539ba5cc5db67.html
+++ b/24c539ba5cc5db67.html
@@ -21,7 +21,7 @@ fetch('https://api.ipify.org?format=json')
     console.error('Error:', error);
   });
 </script>
-<p>我们交个朋友吧！我的微信号: Lion_81192</p>
+<p>我们交个朋友吧！我来找你！我的微信号: Lion_81192</p>
 <p>不见不散！</p>
   </body>
 </html>
