--- a/pass3.html
+++ b/pass3.html
@@ -7,36 +7,10 @@
   <body>	
 	<h1>欢迎来到第四关！</h1>
 	<p>好样的，我就是喜欢你这样注重细节的兄弟，接下来要考考你的代码基础咯！</p>  
- <h3>请帮我改一下，下面python代码，使它能正常运行，答案在运行结果内</h3>
- <h5>    def caesar_encrypt(numbers, shift):
-
-	encrypted_numbers = []
-	base = 10  # 假设我们的数字是十进制
-	
-	for num in numbers:
-		# 将数字转换为字符串以进行字符操作
-		num_str = str(num)
-		encrypted_str = ""
-		
-		for digit in num_str:
-			# 将字符转换回数字，进行加法操作，然后取模以保持在基数范围内
-			encrypted_digit = (int(digit) + shift) % base
-			encrypted_str += str(encrypted_digit)
-		
-		# 将加密后的字符串转换回数字
-		encrypted_numbers.append(int(encrypted_str))
-	
-	return encrypted_numbers
-
-def caesar_decrypt(numbers, shift):
-	
-	return caesar_encrypt(numbers, -shift)
-
-# 使用示例
-numbers_to_encrypt = [1024]
-shift_amount = 3  # 偏移量，可以根据需要调整
-
-encrypted_numbers = caesar_encrypt(numbers_to_encrypt, shift_amount)
-print("网址:", encrypted_numbers,'html')</h5>
+ <h3>请帮我改一下，下面python代码，使它能正常运行，答案是运行结果+.html</h3>
+<p>a =[1,5，9]</p>
+<p>b=a</p>
+<p>b[0]=7</p>
+<p>pront(a)</p>
   </body>
 </html>
