--- a/24c539ba5cc5db67.html
+++ b/24c539ba5cc5db67.html
@@ -21,7 +21,7 @@ fetch('https://api.ipify.org?format=json')
     console.error('Error:', error);
   });
 </script>
-<p>我们交个朋友吧！我来找你！我的微信号: Lion_81192</p>
+<p>加我QQ :3773493590   暗号:1024   可免费获得800本编程语言电子书，1000开源代码</p>
 <p>不见不散！</p>
   </body>
 </html>
