--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>	
 	<h3>欢迎访问！</h3>
  <h1>说明:</h1>
- <h4><i>本网站由逆风(田华强)搭建，详细情况，请阅读以下游戏规则！</i></h4>
+ <h4><i>本网站由逆风搭建，详细情况，请阅读以下游戏规则！</i></h4>
  <h3>游戏规则:</h3>
  <h3><i>本挑战共五关，欢迎来到第一关！请您不惜任何手段，任何方法，查找到下一网站链接！祝您好运！Good Luck！</i></h3>
  <button src="hello.html" onclick="d()">开始</button>
