--- a/[7, 5, 9].html
+++ b/[7, 5, 9].html
@@ -8,12 +8,7 @@
 	<h1>欢迎来到第五关！</h1>
 	<p>欢迎你，来到最后一关，努力冲刺！你就是全网最靓的仔！</p>  
  <p>最后一题，准备好了吗？</p>
- <p>下面是几段Python进度条代码，其中代码内有一些错误，请将错误改正回来，将此网页链接中pass3 替换为运行结果，访问即可通关！预祝你好运！(其考验编程人员读代码能力，项目检查能力，Bug修复能力)</p>
- <p>from tqdm import tqdm,trange</p>
-<p>import time</p>
- 
-<p>for i in trange(100):</p>
-  <p>time.sleep(0.1)</p>
-  <p>pass</p>
+ <p>下面是链接，点开下载文件，运用你所学的知识，找到下一个链接，难度比较大，预祝你好运！</p>
+ <a href="https://github.com/nfHeadwind/cg/密码.img">点击这里！！！</a>
   </body>
 </html>
